--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,7 +11,7 @@ source:
 
 build:
   noarch: python
-  number: 0
+  number: 1
   script: "{{ PYTHON }} -m pip install . -vv"
   
 requirements:
@@ -19,10 +19,10 @@ requirements:
     - python >=3
     - setuptools
     - pip
-    - ecell4_base
+    - ecell4_base >=2.1.0
     - matplotlib-base
   run:
-    - ecell4_base
+    - ecell4_base >=2.1.0
     - matplotlib-base
     - python >=3
 
